--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -15,7 +15,7 @@
 
           <form action="/polls" method="get">
             <button class="policy_search" type="submit" name="button">
-              <input type="hidden" name="polls[candidate_name]" value="<%=@candidate.name%>">
+              <input type="hidden" name="polls[candidate_name]" value="<%=@candidate.id%>">
               <%= "Polling and Financial Data"%>
             </button>
           </form>
