--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -7,9 +7,11 @@
 
 <%= form_tag("/comments", method: "post") do %>
   <input type="hidden" name="post[id]" value="<%=@post.id%>">
-  <input type="text" name="comment[title]">
-  <textarea name="comment[content]"></textarea>
-  <button class="inputbutton" type="submit">
+  <h3>Title</h3>
+  <input autocomplete="off" class="new_form_title" type="text" name="comment[title]"><br>
+  <h3>Content</h3>
+  <textarea class="new_form_content" name="comment[content]"></textarea><br>
+  <button class="policy_search" type="submit">
     Deliver Comment
   </button>
 <% end %>
