--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,12 @@
-<h1>Title: <%=@post.title%></h1>
-<h2>Content: <%=@post.content%></h2>
+<h3><%= link_to @post.user.full_name, user_path(@post.user)%>'s post on <%=@post.policy.candidates.first.name%>'s <%= link_to @post.policy.title, policy_path(@post.policy)%> Policy</h3>
+<h1><%=@post.title%></h1>
+<h2><%=@post.content%></h2>
 
-<h3>Poster: <%= link_to @post.user.full_name, user_path(@post.user)%></h3>
-<h3>Policy: <%= link_to @post.policy.title, policy_path(@post.policy)%></h3>
 
 <% if @post.user.id == current_user.id %>
   <%= form_tag("/posts/:id/edit", method: "get") do %>
    <input type="hidden" name="post[id]" value="<%=@post.id%>">
-   <button class="nav-button" type="submit">
+   <button class="policy_search" type="submit">
      Edit Post
    </button>
    <% end %>
@@ -15,7 +14,7 @@
    <%= form_tag("/posts/:id", method: "delete") do %>
     <input type="hidden" name="policy[id]" value="<%=@post.policy.id%>">
     <input type="hidden" name="post[id]" value="<%=@post.id%>">
-    <button class="nav-button" type="submit">
+    <button class="policy_search" type="submit">
       Delete Post
     </button>
   <% end %>
