--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,3 @@
-<h1>All Users</h1>
-
-<% @users.each do |user|%>
-  <p><%= link_to user.full_name, user_path(user)%></p>
-<% end%>
+<h1>Welcome to Primary Source, a repository of information on Democratic Primary Candidates
+participating in the upcoming 2020 Presidential election.</h1>
+<h2>Sign Up or Log In above to access this website.</h2>
